# pango-libthai

./: ChangeLog  NEWS  README  configure.in
branches/thep/: AUTHORS
branches/thep/src/: Makefile.am
debian/: changelog  control  dirs  install  postinst  postrm  rules
src/: Makefile.am  libthai-fc.c  libthai-ft2.c  libthai-lang.c  libthai-ot.c  libthai-ot.h  libthai-shaper.c  libthai-shaper.h
tags/r_0_1_2/: ChangeLog
tags/r_0_1_2/src/: Makefile.am
tags/r_0_1_3/: NEWS  configure.in
tags/r_0_1_3/src/: libthai-fc.c  libthai-ot.h
tags/r_0_1_4/: ChangeLog  NEWS
tags/r_0_1_4/src/: Makefile.am  libthai-fc.c
tags/r_0_1_5/: configure.in
tags/r_0_1_5/debian/: changelog  copyright
tags/r_0_1_5/src/: Makefile.am  libthai-ot.c  libthai-shaper.c
tags/r_0_1_6/: configure.in
tags/r_0_1_6/debian/: postinst  rules
tags/r_0_1_6/src/: Makefile.am  libthai-ot.h  libthai-shaper.h
tags/start/src/: libthai-x.c
trunk/: .cvsignore  ChangeLog  NEWS  README  configure.in
trunk/debian/: changelog  control  copyright  rules  watch
trunk/src/: Makefile.am  libthai-fc.c  libthai-ft2.c  libthai-lang.c  libthai-ot.c  libthai-ot.h  libthai-shaper.c  libthai-shaper.h  libthai-xft.c
